# seldon-mlmd-tools

./: README.md
golang/: Makefile  README.md  client.go  go.mod  go.sum
golang/proto/ml_metadata/: metadata_store.pb.go  metadata_store_service.pb.go
golang/schemas/: schemas.go
k8s-deployment/: Makefile  metadata-grpc-service.yaml  mysql.yaml
notebooks/: example_data.py  get model from mlmd.ipynb  put model into mlmd.ipynb
python/: Makefile  pyproject.toml
python/seldon_mlmd_tools/: __init__.py  schemas.py  store.py  tools.py
