[tool.poetry]
name = "seldon-mlmd-tools"
version = "0.1.0"
description = ""
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7"
ml-metadata = "0.25.0"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.9"
black = "^20.8b1"
pytest = "^6.0.2"
pyflakes = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
